# SWLDemodTool

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV_GUIDE.md  NB-DNR_GUIDE.md  TECHNICAL-MANUAL.md  TECHNOTES.md  USER_GUIDE.md  pyproject.toml
HFDemodGTK/: CMakeLists.txt
HFDemodGTK/shaders/: waterfall.frag  waterfall.vert
HFDemodGTK/src/: app_state.h  audio.c  audio.h  cat_client.c  cat_client.h  colormap.c  colormap.h  config.c  config.h  drm.c  drm.h  dsp.c  dsp.h  fft.c  fft.h  iq_client.c  iq_client.h  main.c  renderer.c  renderer.h  spectrum.c  spectrum.h  text.c  text.h  waterfall.c  waterfall.h
docs/notes/: CLAUDEnotes.md
src/elad_demod/: app.py  audio.py  cat_client.py  config.py  dsp.py
src/swl_demod_tool/: app.py  audio.py  cat_client.py  config.py  decode_viewer.py  drm.py  dsp.py  iq_client.py  wefax.py
src/swl_demod_tool/sdr/: __init__.py  base.py  elad_fdmduo.py  registry.py
