[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swl-demod-tool"
version = "0.5.2"
description = "TUI SDR demodulator with pluggable backends"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Michel Lachaine", email = "mike@mikelachaine.ca" },
]
keywords = ["sdr", "radio", "demodulator", "elad", "fdm-duo", "iq", "tui", "swl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "rich>=13.0",
    "textual>=0.40",
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
accel = [
    "pyfftw>=0.13",
    "numba>=0.58",
]

[project.urls]
Homepage = "https://github.com/dielectric-coder/SWLDemodTool"

[project.scripts]
swl-demod = "swl_demod_tool.app:main"

[tool.setuptools.packages.find]
where = ["src"]
